--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
+  flutter_svg: ^2.1.0
   geolocator: ^14.0.0
   google_maps_flutter: ^2.12.1
   http: ^1.3.0
